tests/suite/annotations/fail/annfail04/annfail04.cabal
name: annfail04
version: 1.0
build-type: Simple
cabal-version: >= 1.2

library
    build-depends: base
    exposed-modules: Annfail04
                     Annfail04_Help
