tests/suite/annotations/fail/annfail04/annfail04.stderr

[;1mAnnfail04.hs:14:12: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
    GHC stage restriction:
      instance for ‘Thing
                      Int’ is used in a top-level splice or annotation,
      and must be imported, not defined locally
    In the annotation: {-# ANN f (thing :: Int) #-}[0m[0m
[;1m[38;5;31m   |[0m[0m
[;1m[38;5;31m14 |[0m[0m {-# ANN f ([;1m[31mthing[0m[0m :: Int) #-}
[;1m[38;5;31m   |[0m[0m[;1m[31m            ^^^^^[0m[0m
